# neutron-fwaas-dashboard

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  manage.py  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/source/: conf.py  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
etc/: neutron-fwaas-policy.json
neutron_fwaas_dashboard/: version.py
neutron_fwaas_dashboard/api/: fwaas.py  fwaas_v2.py
neutron_fwaas_dashboard/dashboards/project/: forms.py  tables.py  tabs.py  urls.py  views.py
neutron_fwaas_dashboard/enabled/: _1460_project_firewalls_panel.py  _7010_project_firewalls_common.py  _7010_project_firewalls_panel.py  _7011_project_firewalls_panel.py  _7012_project_firewalls_v2_panel.py
neutron_fwaas_dashboard/local_settings.d/: _7000_neutron_fwaas.py
neutron_fwaas_dashboard/test/: helpers.py  settings.py
releasenotes/notes/: add-remove-router-policy-a3145bce0ce3cd92.yaml  deprecate-neutron-fwaas-as-stadium-project-af51b5bcab1cb25f.yaml  drop-fwaas-v1-d10b108e8cf970fe.yaml  drop-py-2-7-aeac41c824c80d4a.yaml  filter-router-ports-in-firewall-group-add-port-2f6e8f3f0b8b6c21.yaml  fwaas-v2-dashboard-cd148bd824c5827f.yaml  remove-unsupported-shared-filters-7a4d4d49d9c7d8cb.yaml  shared-policy-fix-db8ca3cd327540d0.yaml  split-out-from-horizon-4807f953d5dc0799.yaml
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
(+73 files in other folders)
